<resources>
	<string name="app_name">UI Demo</string>
	<string name="Display">Display</string>
	<string name="left_btn">左</string>
	<string name="right_btn">右</string>
	<string name="swt1">开关</string>
	<string name="swt_on">开</string>
	<string name="swt_off">关</string>
	<string name="progress_btn">确认</string>
	<string name="progress_bar_hint">请输入数值</string>
	<string name="Android_icon_RB">Android</string>
	<string name="ios_icon_RB">ios</string>
	<string name="android_icon">TODO</string>
	<string name="CheckBox1">语文</string>
	<string name="CheckBox2">数学</string>
	<string name="CheckBox">英语</string>

</resources>
