<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".MainActivity">

	<androidx.constraintlayout.widget.Guideline
		android:id="@+id/guideline4"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		app:layout_constraintGuide_percent="0.33" />

	<androidx.constraintlayout.widget.Guideline
		android:id="@+id/guideline2"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		app:layout_constraintGuide_percent="0.13" />

	<androidx.constraintlayout.widget.Guideline
		android:id="@+id/guideline3"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		app:layout_constraintGuide_percent="0.22" />

	<TextView
		android:id="@+id/textView1"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/Display"
		android:textSize="30sp"
		app:layout_constraintBottom_toTopOf="@+id/guideline2"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="@+id/guideline" />

	<androidx.constraintlayout.widget.Guideline
		android:id="@+id/guideline"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		app:layout_constraintGuide_percent="0.05" />

	<Button
		android:id="@+id/left_btn"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="68dp"
		android:text="@string/left_btn"
		app:layout_constraintBottom_toTopOf="@+id/guideline3"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="@+id/guideline2"
		app:layout_constraintVertical_bias="0.48" />

	<Button
		android:id="@+id/right_btn"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginEnd="68dp"
		android:text="@string/right_btn"
		app:layout_constraintBottom_toTopOf="@+id/guideline3"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintTop_toTopOf="@+id/guideline2"
		app:layout_constraintVertical_bias="0.48" />

	<Switch
		android:id="@+id/switch1"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/swt1"
		app:layout_constraintBottom_toTopOf="@+id/guideline3"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="@+id/guideline3" />

	<androidx.constraintlayout.widget.Guideline
		android:id="@+id/guideline5"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		app:layout_constraintGuide_percent="0.5" />

	<ProgressBar
		android:id="@+id/progressBar"
		style="?android:attr/progressBarStyle"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		app:layout_constraintBottom_toTopOf="@+id/guideline4"
		app:layout_constraintEnd_toStartOf="@+id/guideline5"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="@+id/guideline3" />

	<ProgressBar
		android:id="@+id/progressBar2"
		style="?android:attr/progressBarStyleHorizontal"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:indeterminate="true"
		app:layout_constraintBottom_toTopOf="@+id/guideline4"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="1.0"
		app:layout_constraintStart_toStartOf="@+id/guideline5"
		app:layout_constraintTop_toTopOf="@+id/guideline3"
		app:layout_constraintVertical_bias="0.492" />

	<ProgressBar
		android:id="@+id/progressBar4"
		style="?android:attr/progressBarStyleHorizontal"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		app:layout_constraintBottom_toTopOf="@+id/guideline4"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="@+id/guideline4" />

	<androidx.constraintlayout.widget.Guideline
		android:id="@+id/guideline6"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		app:layout_constraintGuide_percent="0.39" />

	<EditText
		android:id="@+id/editText"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginStart="20dp"
		android:layout_marginEnd="20dp"
		android:ems="10"
		android:hint="@string/progress_bar_hint"
		android:importantForAutofill="no"
		android:inputType="number"
		android:textAlignment="center"
		app:layout_constraintBottom_toTopOf="@+id/guideline6"
		app:layout_constraintEnd_toStartOf="@+id/guideline5"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="@+id/guideline6" />

	<Button
		android:id="@+id/process_btn"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/progress_btn"
		app:layout_constraintBottom_toTopOf="@+id/guideline6"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="@+id/guideline5"
		app:layout_constraintTop_toTopOf="@+id/guideline6" />

	<androidx.constraintlayout.widget.Guideline
		android:id="@+id/guideline7"
		android:layout_width="0dp"
		android:layout_height="0dp"
		android:orientation="horizontal"
		app:layout_constraintGuide_percent="0.5" />

	<RadioGroup
		android:id="@+id/RadioGroup1"
		android:layout_width="177dp"
		android:layout_height="69dp"
		app:layout_constraintBottom_toTopOf="@+id/guideline7"
		app:layout_constraintEnd_toStartOf="@+id/guideline5"
		app:layout_constraintHorizontal_bias="0.467"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="@+id/guideline7">

		<RadioButton
			android:id="@+id/Android_icon_RB"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:checked="true"
			android:text="@string/Android_icon_RB" />

		<RadioButton
			android:id="@+id/ios_icon_RB"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/ios_icon_RB" />
	</RadioGroup>

	<ImageView
		android:id="@+id/android_icon"
		android:layout_width="73dp"
		android:layout_height="76dp"
		android:contentDescription="@string/android_icon"
		app:layout_constraintBottom_toTopOf="@+id/guideline7"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="@+id/guideline5"
		app:layout_constraintTop_toTopOf="@+id/guideline7"
		app:srcCompat="@drawable/android" />

	<androidx.constraintlayout.widget.Guideline
		android:id="@+id/guideline8"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		app:layout_constraintGuide_percent="0.6" />

	<SeekBar
		android:id="@+id/seekBar"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		app:layout_constraintBottom_toTopOf="@+id/guideline8"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="@+id/guideline8" />

	<androidx.constraintlayout.widget.Guideline
		android:id="@+id/guideline9"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		app:layout_constraintGuide_percent="0.65" />

	<CheckBox
		android:id="@+id/checkBox"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/CheckBox1"
		app:layout_constraintBottom_toTopOf="@+id/guideline9"
		app:layout_constraintEnd_toStartOf="@+id/checkBox3"
		app:layout_constraintHorizontal_bias="0.5"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="@+id/guideline9" />

	<CheckBox
		android:id="@+id/checkBox2"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/CheckBox"
		app:layout_constraintBottom_toBottomOf="@+id/checkBox3"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.5"
		app:layout_constraintStart_toEndOf="@+id/checkBox3"
		app:layout_constraintTop_toTopOf="@+id/checkBox3"
		app:layout_constraintVertical_bias="0.0" />

	<CheckBox
		android:id="@+id/checkBox3"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/CheckBox2"
		app:layout_constraintBottom_toBottomOf="@+id/checkBox"
		app:layout_constraintEnd_toStartOf="@+id/checkBox2"
		app:layout_constraintHorizontal_bias="0.5"
		app:layout_constraintStart_toEndOf="@+id/checkBox"
		app:layout_constraintTop_toTopOf="@+id/checkBox" />

	<androidx.constraintlayout.widget.Guideline
		android:id="@+id/guideline10"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		app:layout_constraintGuide_percent="0.75" />

	<RatingBar
		android:id="@+id/ratingBar"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		app:layout_constraintBottom_toTopOf="@+id/guideline10"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="@+id/guideline10" />

</androidx.constraintlayout.widget.ConstraintLayout>